Refactorizando código y mejorando clases

--- a/Juego_Ruleta/nbproject/project.properties
+++ b/Juego_Ruleta/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Juego_Ruleta
-main.class=juego_ruleta.Juego_Ruleta
+main.class=juego_ruleta.Juego_Casino
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
